--- a/src/data/app.json
+++ b/src/data/app.json
@@ -34,28 +34,7 @@
             {
                 "label": "Home",
                 "link": "/",
-                "children": [
-                    {
-                        "label": "Creative Agency",
-                        "link": "/",
-                        "children": 0
-                    },
-                    {
-                        "label": "Digital Agency",
-                        "link": "/index-2",
-                        "children": 0
-                    },
-                    {
-                        "label": "Creative Portfolio",
-                        "link": "/index-3",
-                        "children": 0
-                    },
-                    {
-                        "label": "Fullscreen Parallax",
-                        "link": "/index-4",
-                        "children": 0
-                    }
-                ]
+                "children": 0
             },
             {
                 "label": "About",
@@ -99,7 +78,7 @@
                 ]
             },
             {
-                "label": "Projects",
+                "label": "Products",
                 "link": "/projects",
                 "children": [
                     {
@@ -136,29 +115,18 @@
                         "label": "Project Detail",
                         "link": "/projects/project-01",
                         "children": 0
+                    },
+                    {
+                        "label": "FAQ",
+                        "link": "/faq",
+                        "children": 0
                     }
                 ]
             },
             {
-                "label": "Blog",
+                "label": "Offers",
                 "link": "/blog",
-                "children": [
-                    {
-                        "label": "Blog Grid",
-                        "link": "/blog",
-                        "children": 0
-                    },
-                    {
-                        "label": "Blog List",
-                        "link": "/blog-2",
-                        "children": 0
-                    },
-                    {
-                        "label": "Blog Detail",
-                        "link": "/blog/play-to-your-strength-and-supercharge-your-business",
-                        "children": 0
-                    }
-                ]
+                "children": 0
             },
             {
                 "label": "Contact Us",
